# miscellaneous-modbus-devices

./: .markdownlint.yaml  README.md  miscellaneous-modbus-devices.code-workspace  pyproject.toml  readme.md  uv-demo.py
devices/ComWinTop/: readme.md
devices/ComWinTop/CWT-SLTH-20W-S-C/demo/: demo.py
devices/ComWinTop/CWT-UR-S/teardown/: readme.md
devices/QD Sensor/: readme.md
devices/QD Sensor/liquid-level-sensor/demo/: demo.py
devices/Shenzhen XingKeChuang Technology Co/XKC-Y25-RS485/demo/: xkc_y25_ch-addr.py
devices/eletechsup/: readme.md
devices/eletechsup/LD58A08/demo/: LD58A08-test.py
devices/eletechsup/LD58A08/mfgr-provided/: LD58A08-1.rar
devices/eletechsup/N4D8B08/: readme.md
devices/eletechsup/N4D8B08/mfgr-provided/N4D8B08 8-channel RS485 IO input and output controller(en)/: N4D8B08 8-channel RS485 IO input and output controller Manual.docx  N4D8B08 8-channel RS485 IO input and output controller commamd.docx
devices/eletechsup/R46CA01/demo/: R46CA01-test.py
devices/eletechsup/R46CA01/mfgr-provided/: R46CA01 modbus rtu protocol.docx  R46CA01-setting.docx
devices/logoele/: readme.md
devices/logoele/demo/: demo.py
devices/zicentech.com/ZCT-YOF07-C001/: datasheet-translated.md  readme.md  test.py
devices/zicentech.com/ZCT-YOF07-C001/mfgr-provided/连续夜位传感器相关资料/ZCT-YLOC1连续液位传感器应用指南 OPERATION INSTRUCTIONS/: ZCT-YLOC1连续 通信说明.docx  ZCT-YLOC1连续液位传感器_IIC通信协议中文手册_V00.docx  ZCT-YLOC1连续液位传感器应用指南 V2 20200115.docx  连续和八点液位通信说明.docx  连续液位传感器应用指南 V3 20220105.docx
(+13 files in other folders)
